added some additional settings as checklist